--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/geotime.css">
+        <link rel="stylesheet" href="css/map.css">
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+        <script src="js/vendor/d3.v3.min.js"></script>
+        <script src="js/vendor/topojson.v1.min.js"></script>
+
     </head>
     <body>
-
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/map.js"></script>
+
     </body>
 </html>
