Display (inactive for the moment) date slider on main page Use coastline map

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/geotime.css">
         <link rel="stylesheet" href="css/map.css">
+        <link rel="stylesheet" href="css/slider.css">
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
@@ -26,6 +27,7 @@
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/slider.js"></script>
         <script src="js/map.js"></script>
 
     </body>
