Add zoom/pan on background map

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li>
                     <a id="helperStep1" class="active" href="javascript:void(0)">
-                        Select with your mouse a country whose name is written on the map
+                        Select with your mouse a country whose name is written on the map or known by you
                     </a>
                 </li>
                 <li>
