Refactor period dates received by the front end

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li class="helperStep">
                     Move the superimposed map so that it corresponds to the background borders.
                     <button class="helperStepDone">Done !</button>
+                    <button class="helperStepCancel">Switch to another map</button>
                 </li>
                 <li class="helperStep">
                     Select with your mouse a country whose name is written on the map or known by you
