Do not recreate the resize handle at each SVG load (just hide it)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </head>
     <body>
 
-        <div id="mapArea"></div>
+        <div id="mapArea">
+        </div>
 
         <div id="mapHelper" class="hidden">
             <ul>
@@ -48,6 +49,10 @@
                 </li>
             </ul>
         </div>
+
+        <svg id="resizeHandle">
+            <rect width="1" height="1" x="0" y="0"></rect>
+        </svg>
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
