Rename backend main page Fix backend display

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,14 +1,3 @@
-<?php
-namespace geotime\admin;
-
-use geotime\Database;
-use geotime\Geotime;
-
-chdir("..");
-require_once("vendor/autoload.php");
-Database::connect();
-?>
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -33,18 +22,16 @@ Database::connect();
 
 <div id="status">
     <div class="loading">Loading...</div>
-    <ul id="lightGallery">
+    <ul id="lightGallery" class="gallery list-unstyled home">
         <li data-src data-html="filename" class="template">
-            <img />
+            <a href="#">
+                <img />
+            </a>
         </li>
     </ul>
 </div>
 
-<?php
-Geotime::showStatus();
-?>
-
-<p style="margin: 10px">
+<p style="margin: 10px; clear: both;">
     <a href="init.php">Initialize database</a> (i.e. insert criteria groups)
     <br />
     <a href="import.php">Import</a> (download SVGs and other information)
@@ -56,7 +43,7 @@ Geotime::showStatus();
 <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 <script src="../js/plugins.js"></script>
 <script src="../js/vendor/light-gallery/js/lightGallery.min.js"></script>
-<script src="../js/map.js"></script>
+<script src="../js/backend.js"></script>
 
 <script type="text/javascript">
     showMapData();
