Refactor helper and autocomplete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <script src="js/vendor/d3.v3.min.js"></script>
         <script src="js/vendor/topojson.v1.min.js"></script>
-        <script src="js/vendor/autocomplete.js"></script>
+        <script src="js/autocomplete.js"></script>
 
     </head>
     <body>
