--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
+        <script src="js/d3.xpath.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="js/slider.js"></script>
