Uniformize Ajax calls and make them use POST

--- a/admin/index.html
+++ b/admin/index.html
@@ -15,6 +15,7 @@
     <link type="text/css" rel="stylesheet" href="../js/vendor/light-gallery/css/lightGallery.css" />
 
     <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../js/vendor/d3.v3.min.js"></script>
 </head>
 <body>
 
@@ -42,10 +43,12 @@
 
 <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 <script src="../js/plugins.js"></script>
+<script src="../js/util.js"></script>
 <script src="../js/vendor/light-gallery/js/lightGallery.min.js"></script>
 <script src="../js/backend.js"></script>
 
 <script type="text/javascript">
+    var gatewayUrl = '../gateway.php';
     showMapData();
 </script>
 </body>
