--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/main.js"></script>
         <script src="js/slider.js"></script>
         <script src="js/map.js"></script>
