--- a/index.html
+++ b/index.html
@@ -34,19 +34,15 @@
                 <li class="helperStep">
                     Move the superimposed map so that it corresponds to the background borders.
                     <br />
-                    <button class="helperStepDone">Done !</button>
-                    <button class="helperStepCancel">Switch to another map</button>
                 </li>
                 <li class="helperStep">
                     Select with your mouse a country whose name is written on the map or known by you
                     <br />
-                    <button class="helperStepDone">Done !</button>
                 </li>
                 <li class="helperStep">
                     <label for="territoryName">Type in its name :</label>
                     <input type="text" id="territoryName" />
                     <br />
-                    <button class="helperStepDone">Done !</button>
                 </li>
             </ul>
         </div>
@@ -64,5 +60,10 @@
         <script src="js/slider.js"></script>
         <script src="js/map.js"></script>
         <script src="js/helper.js"></script>
+
+        <script type="text/javascript">
+            initAutocomplete();
+            showBgMap("backgroundMap", "data/external/ne_110m_coastline.json");
+        </script>
     </body>
 </html>
