--- a/index.html
+++ b/index.html
@@ -26,30 +26,7 @@
     </head>
     <body>
 
-        <div id="mapArea">
-        </div>
-
-        <div id="mapHelper" class="hidden">
-            <ul>
-                <li class="helperStep">
-                    Move the superimposed map so that it corresponds to the background borders.
-                    <br />
-                </li>
-                <li class="helperStep">
-                    Select with your mouse a country whose name is written on the map or known by you
-                    <br />
-                </li>
-                <li class="helperStep">
-                    <label for="territoryName">Type in its name :</label>
-                    <input type="text" id="territoryName" />
-                    <br />
-                </li>
-            </ul>
-        </div>
-
-        <svg id="resizeHandle">
-            <rect width="1" height="1" x="0" y="0"></rect>
-        </svg>
+        <div id="map-placeholders"></div>
 
         <script src="js/vendor/jquery/jquery.min.js"></script>
 
@@ -62,8 +39,11 @@
         <script src="js/helper.js"></script>
 
         <script type="text/javascript">
-            initAutocomplete();
-            showBgMap("backgroundMap", "data/external/ne_110m_coastline.json");
+            initMapPlaceHolders(function() {
+                initMapArea();
+                initAutocomplete();
+                getAndShowBgMap("backgroundMap", "data/external/ne_110m_coastline.json");
+            });
         </script>
     </body>
 </html>
