Fix jQuery include path

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div id="map-placeholders"></div>
 
-        <script src="js/vendor/jquery/jquery.min.js"></script>
+        <script src="js/vendor/jquery/dist/jquery.min.js"></script>
 
         <script src="js/d3.xpath.js"></script>
         <script src="js/plugins.js"></script>
