Add projection selection

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -1,5 +1,9 @@
-<div id="mapArea">
+<div id="projectionSelectionContainer">
+    <label for="projectionSelection">Projection : <br /></label>
+    <select id="projectionSelection"></select>
 </div>
+
+<div id="mapArea"></div>
 
 <div id="mapHelper" class="hidden">
     <h3 id="mapTitle"></h3>
