Add markers when the user selects calibration points Add possibility to remove a calibration point Add possibility to choose between panning or rotating the map Init map calibration Upgrade d3 to 3.5.*

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <script src="js/main.js"></script>
         <script src="js/map.js"></script>
         <script src="js/helper.config.js"></script>
+        <script src="js/helper.config.calibration.js"></script>
         <script src="js/helper.js"></script>
 
         <script type="text/javascript">
