--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -1,6 +1,9 @@
-<div id="projectionSelectionContainer">
+<div id="mapConfigContainer">
     <label for="projectionSelection">Projection : <br /></label>
-    <select id="projectionSelection"></select>
+    <select id="projectionSelection"></select><br />
+    <div id="dragActionContainer"></div>
+    <label for="projectionCenter">Center :</label><span id="projectionCenter"></span><br />
+    <label for="projectionRotation">Rotation :</label><span id="projectionRotation"></span>
 </div>
 
 <div id="mapArea"></div>
