--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
 
         <div id="map-placeholders"></div>
-        <a href="javascript:void(0)" id="loadTerritoryMap">Load a random territory</a>
+        <a href="javascript:void(0)" id="loadRandomTerritoryMap">Load a random territory</a>
 
         <script src="js/vendor/jquery/dist/jquery.min.js"></script>
 
@@ -46,7 +46,7 @@
                 loadHelperConfig();
                 getAndShowBgMap("backgroundMap", "data/external/ne_110m_coastline.json");
             });
-            d3.select('#loadTerritoryMap').on('click', loadTerritoryMap);
+            d3.select('#loadRandomTerritoryMap').on('click', loadRandomTerritoryMap);
         </script>
     </body>
 </html>
