Separate the UI load for projection config

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script type="text/javascript">
             initMapPlaceHolders(function() {
                 initMapArea();
+                loadUI();
                 loadHelperConfig();
                 getAndShowBgMap("backgroundMap", "data/external/ne_110m_coastline.json");
             });
