--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     </head>
     <body>
+        <div id="map-config-container"></div>
         <div id="map-placeholders"></div>
     </body>
 </html>
