--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     </head>
     <body>
+        <div id="map-config-container"></div>
         <div id="map-placeholders"></div>
         <a href="javascript:void(0)" id="loadRandomTerritoryMap">Load a random territory</a>
     </body>
