Get rid of criteria groups : use Sparql queries directly

--- a/admin/index.html
+++ b/admin/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <p style="margin: 10px; clear: both;">
-    <a href="init.php">Initialize database</a> (i.e. insert criteria groups and reference territories)
+    <a href="init.php">Initialize database</a> (i.e. insert reference territories)
     <br />
     <a href="import.php">Import SVGs</a>
     <br />
