Fix link on admin page

--- a/admin/index.html
+++ b/admin/index.html
@@ -47,7 +47,7 @@
 <p style="margin: 10px; clear: both;">
     <a href="init.php">Import reference territories and SVGs</a>
     <br />
-    <a href="import.php?clean">Cleanup and import</a>
+    <a href="init.php?clean">Import reference territories and SVGs (clean first)</a>
 </p>
 
 <script src="../js/plugins.js"></script>
