--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
                     loadHelperConfig();
                     getAndShowBgMap("backgroundMap", "data/external/ne_110m_coastline.json", function() {
                         applyCurrentProjection();
+                        loadMaps();
                     });
                 });
                 d3.select('#loadRandomTerritoryMap').on('click', loadRandomTerritoryMap);
+                d3.select('#loadTerritoryMap').on('click', function() {
+                    var selectedMapFileName = d3.select(mapSelection.node().options[mapSelection.node().selectedIndex]).datum().fileName;
+                    loadRandomTerritoryMap(false, selectedMapFileName);
+                });
             };
         </script>
         <script data-main="js/main" src="js/vendor/requirejs/require.js"></script>
@@ -36,6 +41,9 @@
     </head>
     <body>
         <div id="map-placeholders"></div>
-        <a href="javascript:void(0)" id="loadRandomTerritoryMap">Load a random territory</a>
+        <!--<a href="javascript:void(0)" id="loadRandomTerritoryMap">Load a random territory</a>-->
+        <div id="selectMap">
+            <select id="maps"></select>&nbsp;<a href="javascript:void(0)" id="loadTerritoryMap">Load map</a>
+        </div>
     </body>
 </html>
