--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="css/slider.css">
         <link rel="stylesheet" href="css/helper.css">
 
+        <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap-theme.min.css">
+
         <script type="text/javascript" src="js/dependencies.js"></script>
         <script type="text/javascript">
             onLoad = function() {
@@ -45,7 +48,7 @@
         <div id="map-placeholders"></div>
         <!--<a href="javascript:void(0)" id="loadTerritoryMap">Load a random territory</a>-->
         <div id="selectMap">
-            <select id="maps"></select>
+            <select class="form-control" id="maps"></select>
         </div>
     </body>
 </html>
