Group helper steps by process

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -10,7 +10,8 @@
 
 <div id="mapHelper" class="hidden">
     <h3 id="mapTitle"></h3>
-    <ul></ul>
+    <ul id="processTabs" class="nav nav-tabs nav-justified"></ul>
+    <ul id="helperStepsContainer"></ul>
 </div>
 
 <svg id="resizeHandle">
