Per-process helper step loading

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -11,7 +11,7 @@
 <div id="mapHelper" class="hidden">
     <h3 id="mapTitle"></h3>
     <ul id="processTabs" class="nav nav-tabs nav-justified"></ul>
-    <ul id="helperStepsContainer"></ul>
+    <div id="helperStepsContainer" class="list-group"></div>
 </div>
 
 <svg id="resizeHandle">
