Don't show the map title (it is already shown in the map dropdown)

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -2,8 +2,11 @@
 
 <div id="mapArea"></div>
 
-<div id="mapHelper" class="hidden">
-    <h3 id="mapTitle"></h3>
+<div id="mapHelper">
+    <div id="selectMap">
+        <select class="form-control" id="maps"></select>
+        <!--<a href="javascript:void(0)" id="loadTerritoryMap">Load a random territory</a>-->
+    </div>
     <ul id="processTabs" class="nav nav-tabs nav-justified"></ul>
     <div id="helperStepsContainer" class="list-group"></div>
 </div>
