Bootstrap-ize right panel

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -2,7 +2,7 @@
 
 <div id="mapArea"></div>
 
-<div id="mapHelper">
+<div id="mapHelper" class="panel panel-default">
     <div id="selectMap">
         <select class="form-control" id="maps"></select>
         <!--<a href="javascript:void(0)" id="loadTerritoryMap">Load a random territory</a>-->
