Fix lat-long path coordinates calculation

--- a/index_headless.html
+++ b/index_headless.html
@@ -1,5 +1,21 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/geotime.css">
+        <link rel="stylesheet" href="css/map.css">
+        <link rel="stylesheet" href="css/slider.css">
+        <link rel="stylesheet" href="css/helper.css">
+
+        <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap-theme.min.css">
+
         <script type="text/javascript" src="js/dependencies.js"></script>
         <script data-main="js/main_headless" src="js/vendor/requirejs/require.js"></script>
     </head>
