Isolate Natural Earth import

--- a/admin/index.html
+++ b/admin/index.html
@@ -48,6 +48,8 @@
     <a href="init.php">Import reference territories and SVGs</a>
     <br />
     <a href="init.php?clean">Import reference territories and SVGs (clean first)</a>
+    <br />
+    <a href="importnaturalearth.php">Import Natural Earth data</a>
 </p>
 
 <script src="../js/plugins.js"></script>
