Remove requireJS use to make Angular be loaded properly

--- a/map-placeholders.html
+++ b/map-placeholders.html
@@ -4,10 +4,7 @@
 
 <div id="mapHelper" class="panel panel-default">
     <div id="selectMap">
-        <select class="form-control" id="maps" ng-model="mapFileName" ng-change="loadTerritoryMap(false)">
-            <option>a</option>
-            <option>b</option>
-        </select>
+        <select class="form-control" id="maps" ng-model="mapFileName" ng-change="loadTerritoryMap(false)"></select>
         <!--<a href="javascript:void(0)" id="loadTerritoryMap">Load a random territory</a>-->
     </div>
     <ul id="processTabs" class="nav nav-tabs nav-justified"></ul>
