--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="geotimeApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -17,7 +17,26 @@
         <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap-theme.min.css">
 
-        <script type="text/javascript" src="js/dependencies.js"></script>
+        <script type="text/javascript" src="js/vendor/modernizr/modernizr.js"></script>
+        <script type="text/javascript" src="js/vendor/d3/d3.js"></script>
+        <script type="text/javascript" src="js/vendor/topojson/topojson.js"></script>
+        <script type="text/javascript" src="js/autocomplete.js"></script>
+        <script type="text/javascript" src="js/vendor/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="js/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/plugins.js"></script>
+        <script type="text/javascript" src="js/view.js"></script>
+        <script type="text/javascript" src="js/vendor/d3/d3.min.js"></script>
+        <script type="text/javascript" src="js/util.js"></script>
+        <script type="text/javascript" src="js/d3.xpath.js"></script>
+        <script type="text/javascript" src="js/map.js"></script>
+        <script type="text/javascript" src="js/helper.js"></script>
+        <script type="text/javascript" src="js/helper.config.js"></script>
+        <script type="text/javascript" src="js/helper.config.calibration.js"></script>
+        <script type="text/javascript" src="js/vendor/angular/angular.min.js"></script>
+        <script type="text/javascript" src="js/vendor/angular-route/angular-route.min.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/appcontrollers.js"></script>
+
         <script type="text/javascript">
             onLoad = function() {
                 initMapPlaceHolders(function() {
@@ -45,9 +64,6 @@
 
     </head>
     <body ng-controller="MapController">
-        {{ helloGeotime }}
         <div ng-view></div>
-        <!--<div id="map-placeholders"></div>-->
-        <script data-main="js/main" src="js/vendor/requirejs/require.js"></script>
     </body>
 </html>
