Start Angular translation for helper

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <script type="text/javascript" src="js/helper.config.js"></script>
         <script type="text/javascript" src="js/helper.config.calibration.js"></script>
         <script type="text/javascript" src="js/vendor/angular/angular.min.js"></script>
-        <script type="text/javascript" src="js/vendor/angular-route/angular-route.min.js"></script>
+        <script type="text/javascript" src="js/vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/appcontrollers.js"></script>
     </head>
     <body>
-        <div ng-view></div>
+        <div ui-view></div>
     </body>
 </html>
