--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script type="text/javascript" src="js/vendor/angular/angular.min.js"></script>
         <script type="text/javascript" src="js/vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript" src="js/appcontrollers.js"></script>
+        <script type="text/javascript" src="js/controllers/MapController.js"></script>
         <script type="text/javascript" src="js/controllers/TerritoryIdentificationController.js"></script>
     </head>
     <body>
