--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <script type="text/javascript" src="js/vendor/modernizr/modernizr.js"></script>
         <script type="text/javascript" src="js/vendor/d3/d3.js"></script>
         <script type="text/javascript" src="js/vendor/topojson/topojson.js"></script>
-        <script type="text/javascript" src="js/autocomplete.js"></script>
         <script type="text/javascript" src="js/vendor/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/plugins.js"></script>
@@ -34,6 +33,7 @@
         <script type="text/javascript" src="js/helper.config.calibration.js"></script>
         <script type="text/javascript" src="js/vendor/angular/angular.min.js"></script>
         <script type="text/javascript" src="js/vendor/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="js/vendor/angucomplete-alt/dist/angucomplete-alt.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/controllers/MapController.js"></script>
         <script type="text/javascript" src="js/controllers/TerritoryIdentificationController.js"></script>
