--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/controllers/MapController.js"></script>
         <script type="text/javascript" src="js/controllers/TerritoryIdentificationController.js"></script>
+        <script type="text/javascript" src="js/controllers/CalibrationController.js"></script>
     </head>
     <body>
-        <div ui-view></div>
+        <div ui-view="content"></div>
     </body>
 </html>
