Split templates and controllers

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <script type="text/javascript" src="js/vendor/angucomplete-alt/dist/angucomplete-alt.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/controllers/MapController.js"></script>
+        <script type="text/javascript" src="js/controllers/MapDragController.js"></script>
+        <script type="text/javascript" src="js/controllers/HelperController.js"></script>
         <script type="text/javascript" src="js/controllers/TerritoryIdentificationController.js"></script>
         <script type="text/javascript" src="js/controllers/CalibrationController.js"></script>
     </head>
