Externalize markers template

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <script type="text/javascript" src="js/controllers/HelperController.js"></script>
         <script type="text/javascript" src="js/controllers/TerritoryIdentificationController.js"></script>
         <script type="text/javascript" src="js/controllers/CalibrationController.js"></script>
+        <script type="text/javascript" src="js/controllers/CalibrationMarkerController.js"></script>
     </head>
     <body>
         <div ui-view="content"></div>
